@@ -24,6 +24,8 @@ Changes from 0.6-0 to 0.7-0
 8.  Text with multiple labels no longer draw all labels at each location.
     (Simon)
 
+9.  Points (in particular, pch = 1) have more accurate radii. (Simon)
+
 
 Changes from 0.5-10 to 0.6-0
 ============================
